--- a/stores/templates/stores/index.html
+++ b/stores/templates/stores/index.html
@@ -1,7 +1,22 @@
 {% extends 'base.html' %}
 
 
-{% block title %}
+{% block title %} 25 & 27s {% endblock title %}
 
-{% endblock title %}
 
+{% block content %}
+  
+  <h1>Index</h1>
+
+  {% if request.user.is_superuser %}
+    <a href="{% url 'stores:create' %}" class="">가게 등록</a>
+  {% endif %}
+
+  {% for store in stores %}
+    <p class="">
+      가게 이름 - 
+      <a href="{% url 'stores:detail' store.pk %}" class="">{{ store.name }}</a>
+    </p>
+  {% endfor %}
+
+{% endblock content %}
