--- a/stores/templates/stores/index.html
+++ b/stores/templates/stores/index.html
@@ -71,3 +71,20 @@
 
 {% endblock title %}
 
+
+{% block content %}
+  
+  <h1>Index</h1>
+
+  {% if request.user.is_superuser %}
+    <a href="{% url 'stores:create' %}" class="">가게 등록</a>
+  {% endif %}
+
+  {% for store in stores %}
+    <p class="">
+      가게 이름 - 
+      <a href="{% url 'stores:detail' store.pk %}" class="">{{ store.name }}</a>
+    </p>
+  {% endfor %}
+
+{% endblock content %}
