--- a/stores/templates/stores/index.html
+++ b/stores/templates/stores/index.html
@@ -2,8 +2,109 @@
 
 
 {% block content %}
-  
-  <h1>Index</h1>
+
+<div class="container-fluid" style="padding: 0;">
+    <header class="d-flex justify-content-center align-items-center">
+        <div class="container-fluid bg-image" style="background-image: url('https://d2v80xjmx68n4w.cloudfront.net/gigs/fPoZ31584321311.jpg'); width: 100%;">
+            <h1 class="title text-light text-center">솔직한 리뷰, 믿을 수 있는 평점!</h1>
+            <h1 class="title text-light text-center">망고플레이트</h1>
+            <div class="container-fluid d-flex justify-content-center mb-5">
+                <form action="https://search.naver.com/search.naver" method="GET">
+                    <div class="mx-quto input-group mt-5">  
+                        <mx-auto>
+                            <input name="query" type="text" class="form-control" placeholder="지역, 식당 또는 음식" aria-label="search" aria-describedby="button-addon2">
+                        </mx-auto>  
+                        <button class="btn btn-warning" type="submit" id="button-addon2">검색</button>   
+                    </div>  
+                </form>  
+            </div>  
+        </div>
+    </header>
+    <main>
+        <div id="carouselExampleIndicators" class="carousel slide">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <div class="container">
+                        <h1>토픽 1</h1>
+                        <div class="row">
+                            {% for store in stores %}
+                            <div class="col">
+                                <div class="container">
+                                    <a href="{% url 'stores:detail' store.pk %}">{{ store.image }}</a>
+                                    <p>{{ store.name }}</p>
+                                    <p>{{ store.address }} - {{ store.category }}</p>
+                                </div>
+                            </div>
+                            {% endfor %}
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="container">
+                        <h1>토픽 2</h1>
+                        {% comment %} 반복문 끼워서 그리드로 게시글 정리  {% endcomment %}
+                        <div class="row">
+                            {% for store in stores %}
+                            <div class="col">
+                                <div class="container">
+                                    <a href="{% url 'stores:detail' store.pk %}">{{ store.image }}</a>
+                                    <p>{{ store.name }}</p>
+                                    <p>{{ store.address }} - {{ store.category }}</p>
+                                </div>
+                            </div>
+                            {% endfor %}
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="container">
+                        <h1>토픽 3</h1>
+                        {% comment %} 반복문 끼워서 그리드로 게시글 정리  {% endcomment %}
+                        <div class="row">
+                            {% for store in stores %}
+                            <div class="col">
+                                <div class="container">
+                                    <a href="{% url 'stores:detail' store.pk %}">{{ store.image }}</a>
+                                    <p>{{ store.name }}</p>
+                                    <p>{{ store.address }} - {{ store.category }}</p>
+                                </div>
+                            </div>
+                            {% endfor %}
+                        </div>
+                    </div>
+                </div>
+            </div>
+            
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+        <div class="container">
+            <h1>토픽 1</h1>
+            <div class="row">
+                {% for store in stores %}
+                <div class="col">
+                    <div class="container">
+                        <a href="{% url 'stores:detail' store.pk %}">{{ store.image }}</a>
+                        <p>{{ store.name }}</p>
+                        <p>{{ store.address }} - {{ store.category }}</p>
+                    </div>
+                </div>
+                {% endfor %}
+            </div>
+        </div>
+    </main>
+</div>
 
   {% if request.user.is_superuser %}
     <a href="{% url 'stores:create' %}" class="">가게 등록</a>
