--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -13,5 +13,16 @@
     {{ form.as_p }}
     <input type="submit">
   </form>
+
+
+{% load socialaccount %}
+<a href="{% provider_login_url 'google' method='oauth2' %}">
+구글 회원가입
+</a>
+
+<a href="{% provider_login_url 'kakao' method='oauth2' %}">
+카카오톡 회원가입
+</a>
+
 </body>
 </html>
