--- a/accounts/templates/accounts/change_password.html
+++ b/accounts/templates/accounts/change_password.html
@@ -1,17 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  <h1>비밀번호 변경</h1>
-  <form action="{% url 'accounts:change_password' %}" method="POST">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit">
+{% extends 'base.html' %}
+
+{% block content %}
+<h2>비밀번호 변경</h2>
+  <form action="{% url 'accounts:change_password' %}" method ="POST">
+  {% csrf_token %}
+  {{ form.as_p }}
+  <div class="container-fluid d-flex justify-content-end me-5 mt-3">
+    <input type="submit" class="btn btn-outline-primary">
+  </div>
   </form>
-</body>
-</html>
+ {% endblock content %}
