--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -7,34 +7,41 @@
       <img src="https://d1.awsstatic.com/logos/customers/KO/logo_Mangoplate.12908c5b9952bc4f14bdc966e5e81b521415fc6a.png" style="width: 20rem;">
     </div>
     <div class="container-fluid d-flex justify-content-center mt-5">
-      <div class="container">
-        <h1 class='text-center mt-5 ms-5'>로그인</h1>
+      <div class="row d-flex justify-content-center">
+        <div class="container-fluid d-flex justify-content-center">
+          <h1 class='text-center'>로그인</h1>
+        </div>
+        <div class="container-fluid d-flex justify-content-center">
+          <form action="{% url 'accounts:login' %}" method="POST">
+              {% csrf_token %}
+              {% for field in form  %}
+              <div calss="input-group">
+                  <div class="input-gourp-text" id="{{ field.auto_id }}">{{ field.label }}</div>
+                  {{ field }}
+              </div>
+              <br>
+              {% endfor %}
+              <div class="container-fluid d-flex justify-content-center">
+                  <input type="submit" class="btn btn-outline-primary" role="button" value="로그인">
+              </div>
+          </form>
+        </div>
+        <div class="container d-flex justify-content-center mt-5">
+          {% load socialaccount %}
+          <div class="row d-flex justify-content-center">
+            <a href="{% provider_login_url 'google' method='oauth2' %}" class="d-flex justify-content-center">
+              <img src="https://t1.daumcdn.net/cfile/tistory/998689465C3D7D1217" style="width: 20rem;">
+            </a>
+            <a href="{% provider_login_url 'kakao' method='oauth2' %}" class="d-flex justify-content-center">
+              <img src="https://t1.daumcdn.net/cfile/tistory/99BEE8465C3D7D1214" style="width: 20rem;">
+            </a>
+          </div>
+        </div>
       </div>
-      <div class="container">
-        <form action="{% url 'accounts:login' %}" method="POST">
-            {% csrf_token %}
-            {% for field in form  %}
-            <div calss="input-group">
-                <div class="input-gourp-text" id="{{ field.auto_id }}">{{ field.label }}</div>
-                {{ field }}
-            </div>
-            <br>
-            {% endfor %}
-            <div class="container-fluid d-flex justify-content-center mt-1">
-                <input type="submit" class="btn"  role="button">
-            </div>
-        </form>
-      </div>
+
+    
     </div>
   </div>
-{% load socialaccount %}
-<a href="{% provider_login_url 'google' method='oauth2' %}">
-구글 회원가입
-</a>
-
-<a href="{% provider_login_url 'kakao' method='oauth2' %}">
-카카오톡 회원가입
-</a>
 
 </body>
 </html>
