--- a/accounts/templates/accounts/update.html
+++ b/accounts/templates/accounts/update.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <h1>회원정보 수정</h1>
-  <form action="{% url 'accounts:update' %}" method="POST">
+  <form action="{% url 'accounts:update' %}" method="POST" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.as_p }}
     <input type="submit">
